[gd_scene load_steps=6 format=2]

[ext_resource path="res://themes/theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/data_list.gd" type="Script" id=2]
[ext_resource path="res://fonts/costa_rica.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]

size = 52
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]

size = 32
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )

[node name="DataList" type="Panel"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 704.0, 640.0 ],
"_edit_lock_": true,
"_edit_vertical_guides_": [ 1264.0, 1136.0, 1120.0, 1024.0, 1008.0, 912.0, 832.0, 816.0, 640.0, 16.0 ]
}

[node name="Label" type="Label" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_top = 16.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Contact Information"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Name" type="LineEdit" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 16.0
margin_top = -224.0
margin_right = -464.0
margin_bottom = -176.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
editable = false
focus_mode = 2
context_menu_enabled = true
placeholder_text = "Name"
placeholder_alpha = 0.6
caret_blink = true
caret_blink_speed = 0.65
caret_position = 0

[node name="Address" type="LineEdit" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 16.0
margin_top = -160.0
margin_right = -16.0
margin_bottom = -107.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
editable = false
focus_mode = 2
context_menu_enabled = true
placeholder_text = "Address"
placeholder_alpha = 0.6
caret_blink = true
caret_blink_speed = 0.65
caret_position = 0

[node name="Telephone" type="LineEdit" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 832.0
margin_top = -224.0
margin_right = -16.0
margin_bottom = -176.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
editable = false
focus_mode = 2
context_menu_enabled = true
placeholder_text = "Telephone"
placeholder_alpha = 0.6
caret_blink = true
caret_blink_speed = 0.65
caret_position = 0

[node name="Description" type="LineEdit" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 16.0
margin_top = -32.0
margin_right = -16.0
margin_bottom = 21.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
max_length = 96
editable = false
focus_mode = 2
context_menu_enabled = true
placeholder_text = "Description"
placeholder_alpha = 0.6
caret_blink = true
caret_blink_speed = 0.65
caret_position = 0

[node name="Town" type="LineEdit" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 16.0
margin_top = -96.0
margin_right = -16.0
margin_bottom = -43.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
editable = false
focus_mode = 2
context_menu_enabled = true
placeholder_text = "Town"
placeholder_alpha = 0.6
caret_blink = true
caret_blink_speed = 0.65
caret_position = 0

[node name="Group" type="Button" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 16.0
margin_top = 32.0
margin_right = -16.0
margin_bottom = 81.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "SELECT GROUP"
flat = false
align = 1

[node name="FavCombo" type="Control" parent="." index="7"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 16.0
margin_top = 96.0
margin_right = -1224.0
margin_bottom = 144.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Favourite" type="Label" parent="FavCombo" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 144.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Favourite:"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="FavouriteToggle" type="Button" parent="FavCombo" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 144.0
margin_right = 224.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "NO"
flat = false
align = 1

[node name="CreateGroup" type="Button" parent="." index="8"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -576.0
margin_top = -80.0
margin_right = -384.0
margin_bottom = -16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "ADD GROUP"
flat = false
align = 1

[node name="Save" type="Button" parent="." index="9"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -368.0
margin_top = -80.0
margin_right = -272.0
margin_bottom = -16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "SAVE"
flat = false
align = 1

[node name="Edit" type="Button" parent="." index="10"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -256.0
margin_top = -80.0
margin_right = -160.0
margin_bottom = -16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "EDIT"
flat = false
align = 1

[node name="Cancel" type="Button" parent="." index="11"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -144.0
margin_top = -80.0
margin_right = -16.0
margin_bottom = -16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "CANCEL"
flat = false
align = 1


